--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <description>my-app</description>
     <properties>
         <java.version>21</java.version>
+        <java-jwt.version>3.11.0</java-jwt.version>
     </properties>
     <dependencies>
         <dependency>
@@ -44,6 +45,22 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>${java-jwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-bom</artifactId>
+            <version>2.17.0</version>
+            <scope>import</scope>
+            <type>pom</type>
         </dependency>
     </dependencies>
 
