--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,15 @@ spring:
     url: jdbc:mysql://localhost:3306/micro_order?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
     username: root
     password:
+  redis:
+    redisson:
+      config: |
+        singleServerConfig:
+          address: "redis://127.0.0.1:6379"
+          database: 0
+        threads: 0
+        nettyThreads: 0
+        codec: !<org.redisson.codec.Kryo5Codec> {}
+        transportMode: "NIO"
 server:
   port: 8080
