--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <jbcrypt.version>0.4</jbcrypt.version>
         <druid-starter.version>1.2.20</druid-starter.version>
         <shiro-starter.version>2.0.0</shiro-starter.version>
+        <fastjson.version>1.2.76</fastjson.version>
+        <guava.version>30.0-jre</guava.version>
     </properties>
     <dependencies>
         <dependency>
@@ -87,6 +89,16 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>${druid-starter.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
     </dependencies>
 
