--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,6 +43,7 @@ spring:
 server:
   port: 8080
 
-jwt:
-  ttl: 1800
-  salt: J2i5W35FvjhxjLPR
+shiro:
+  jwt:
+    ttl: 1800
+    salt: J2i5W35FvjhxjLPR
